2007-06-26  Rudi Schlatte  <rudi@constantly.at>

	* maude-mode.el (maude-mode-menu, maude-mode): Add "Maude"
	pull-down menu.

2007-06-25  Rudi Schlatte  <rudi@constantly.at>

	* maude-mode.el: change fontification so that equations and
	rewrite rules across multiple lines are colored.  Support views in
	core maude.
	(maude-flk-label, maude-font-lock-keywords): support typenames
	like Map{Nat,Qid} etc.
	(maude-font-lock-keywords): Support --- comments
