@@ -1,3 +1,8 @@
+2007-06-27  Rudi Schlatte  <rudi@constantly.at>
+
+	* maude-mode.el (maude-font-lock-keywords): more permissive
+	variable names.
+
 2007-06-26  Rudi Schlatte  <rudi@constantly.at>
 
 	* maude-mode.el (maude-mode-menu, maude-mode): Add "Maude"
